<resources>
    <string name="login_status_login_success">Logged in</string>
    <string name="login_status_login_fail">Login failed</string>
    <string name="login_status_logging_in">Logging in</string>
    <string name="login_hint_username">Enter a user name</string>
    <string name="login_hint_sms">Enter a  password</string>
    <string name="login_text_register_tips">No account, Register</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_warning_get_sms_frequently">Frequent verification code requests</string>
    <string name="login_tips_invalid_phone">Enter a valid mobile number</string>
    <string name="login_tips_sent_sms">Sent</string>
    <string name="login_get_sms_fail">Failed to get verification code: %1$s</string>
    <string name="login_tips_input_correct_info">Enter a username and password</string>
    <string name="login_tips_register">This is your first login. Please complete your profile.</string>
    <string name="login_form_count_time">%1$d sec</string>
    <string name="login_title_register">Register</string>
    <string name="login_hint_user_name">Enter a username</string>
    <string name="login_tips_user_name">Chinese characters, letters, numbers and underscores, 2 - 20 words</string>
    <string name="login_user_approve">Agree</string>
    <string name="login_user_refuse">Disagree</string>
    <string name="login_toast_set_username">Set your username</string>
    <string name="login_toast_register_success_and_logging_in">Registered successfully</string>
    <string name="login_toast_failed_to_set_username">Failed: %s</string>
    <string name="login_welcome_tips">Welcome to Tencent\nReal-Time Communication</string>
    <string name="login_confirm">Done</string>
    <string name="login_set_user_avatar">Change Profile Picture</string>
    <string name="login_toast_success_to_set_username">Successfully</string>
    <string name="login_btn_cancel">Cancel</string>
    <string name="login_country_code">Country Code</string>
    <string name="login_send_verify_code">Please send the verification code</string>
    <string name="login_privacy_protocol_detail">&#160;Privacy Policy&#160;</string>
    <string name="login_protocol_start">I have read and agree to the </string>
    <string name="login_user_agreement_detail">&#160;Terms of Use&#160;</string>
    <string name="login_protocol_and">and</string>
    <string name="login_privacy_protocol">Privacy Policy</string>
    <string name="login_user_agreement">Terms of Use</string>
    <string name="login_protocol_tip">You must agree to the Privacy Policy and Terms of Use first.</string>
    <string name="login_protocol_title">Welcome to Tencent Real-Time Communication</string>
    <string name="login_protocol_tip_start">Welcome to Tencent Real-Time Communication. We will help you understand our collection, use, and storage of personal information through the</string>
    <string name="login_protocol_tip_end">.</string>
    <string name="login_app_version">MLVB v%s</string>
    <string name="login_welcome_user_name_tips">Welcome new classmates\nYou need to set a nickname when logging in for the first time</string>
    <string name="login_btn_register">Register</string>
    <string name="login_not_register">New User</string>
    <string name="login_hint_user_id">Enter a userId</string>
    <string name="login_user_id">Username</string>
</resources>

