<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_color_white">

    <ImageView
        android:background="@drawable/login_bg_login_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_welcome_tips"
        android:layout_marginTop="114dp"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_welcome_tips"
        android:textStyle="bold"
        android:layout_marginLeft="39dp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.tencent.liteav.login.ui.view.LoginStatusLayout
        android:id="@+id/cl_login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/login_bg_input_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_tips"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_hint_username"
            android:singleLine="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/login_main_text"
            android:textColorHint="@color/login_color_edit_bg"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/username_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            android:background="@color/login_line"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_hint_sms"
            android:singleLine="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/login_main_text"
            android:textColorHint="@color/login_color_edit_bg"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <View
            android:id="@+id/password_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:background="@color/login_line"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_start_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:text="@string/login_text_register_tips"
            android:textColor="@color/login_color_blue"
            android:textSize="14sp"
            android:layout_marginTop="6dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.47"
            app:layout_constraintTop_toBottomOf="@id/password_line" />

        <Button
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_bg_button"
            android:text="@string/login_btn_login"
            android:textColor="@color/login_color_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_start_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/progress_group"
        android:visibility="gone"
        android:background="@color/login_color_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#bbbbbb"
        android:textSize="12sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
